--- a/Dockerfile_base
+++ b/Dockerfile_base
@@ -11,37 +11,7 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 
-# 设置国内阿里云镜像站、安装chromium 102、文泉驿免费中文字体等依赖库
-#RUN echo "https://mirrors.aliyun.com/alpine/v3.11/main/" > /etc/apk/repositories \
-#    && echo "https://mirrors.aliyun.com/alpine/v3.11/community/" >> /etc/apk/repositories \
-#    && echo "https://mirrors.aliyun.com/alpine/edge/testing/" >> /etc/apk/repositories \
-#    && apk -U --no-cache update && apk -U --no-cache --allow-untrusted add \
-#      zlib-dev \
-#      xorg-server \
-#      dbus \
-#      ttf-freefont \
-#        nss \
-#        freetype \
-#        freetype-dev \
-#        harfbuzz \
-#        ca-certificates \
-#      chromium \
-#      wqy-zenhei@edge \
-#      bash \
-#      bash-doc \
-#      bash-completion -f
-
-
-
-#RUN echo @edge http://nl.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories && apk add
-
-
-# Installs latest Chromium (100) package.
-#RUN set -eux && sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
-
-
-
-
+设置国内阿里云镜像站、安装chromium 81、文泉驿免费中文字体等依赖库
 RUN echo "https://mirrors.aliyun.com/alpine/v3.11/main/" > /etc/apk/repositories \
     && echo "https://mirrors.aliyun.com/alpine/v3.11/community/" >> /etc/apk/repositories \
     && echo "https://mirrors.aliyun.com/alpine/latest-stable/testing" >> /etc/apk/repositories \
