--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ali-oss": "^6.17.1",
     "dayjs": "^1.10.7",
     "egg": "^2.6.0",
+    "egg-alinode": "^2.0.1",
     "egg-cors": "^2.2.3",
     "egg-jwt": "^3.1.7",
     "egg-redis": "^2.4.0",
