--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "egg-jwt": "^3.1.7",
     "egg-redis": "^2.4.0",
     "egg-scripts": "^2.0.0",
+    "egg-sentry": "^1.0.0",
     "egg-sequelize": "^5.2.1",
     "egg-ts-helper": "^1.25.0",
     "egg-validate": "^2.0.2",
